deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: webapp
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: my-web
          image: nginx
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /homework
              name: data
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
          readinessProbe:
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 1
            exec:
              command:
                - cat
                - /homework/index.html
          lifecycle:
            preStop:
              exec:
                command: [ 'sh','-c', 'rm -rf /homework/index.html' ]
      nodeSelector:
        homework: 'true'
      volumes:
        - name: data
          emptyDir: { }
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
