pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: homework
  namespace: homework
spec:
  containers:
    - name: my-web
      image: nginx
      ports:
        - containerPort: 8000
      volumeMounts:
        - mountPath: /homework
          name: data
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      lifecycle:
        preStop:
          exec:
            command: ['sh','-c', 'rm -rf /homework/index.html']
  volumes:
    - name: data
      emptyDir: {}
    - name: nginx-conf
      configMap:
        name: nginx-conf
        items:
          - key: nginx.conf
            path: nginx.conf
